# storage/api-docs/api-docs.json
@@ -7,6 +7,9 @@
     "paths": {
         "/api/register": {
             "post": {
+                "tags": [
+                    "Authentication"
+                ],
                 "summary": "Register a new user",
                 "operationId": "8a56853624e025573120a09a4c75d468",
                 "requestBody": {
@@ -43,6 +46,9 @@
         },
         "/api/login": {
             "post": {
+                "tags": [
+                    "Authentication"
+                ],
                 "summary": "User login",
                 "operationId": "a3b306d14572d1f4bd6c064b3233e7b8",
                 "requestBody": {
@@ -75,6 +81,9 @@
         },
         "/api/logout": {
             "post": {
+                "tags": [
+                    "Authentication"
+                ],
                 "summary": "User logout",
                 "operationId": "fe8f3429cd6979b3b4517e186505f9f9",
                 "responses": {
@@ -652,7 +661,20 @@
             }
         }
     },
+    "components": {
+        "securitySchemes": {
+            "bearerAuth": {
+                "type": "http",
+                "bearerFormat": "JWT",
+                "scheme": "bearer"
+            }
+        }
+    },
     "tags": [
+        {
+            "name": "Authentication",
+            "description": "API Endpoints for authentication"
+        },
         {
             "name": "Cars",
             "description": "API Endpoints for car management"
